# interpreter

./: Cargo.toml  LICENSE.md  README.md  bindings.h  build.rs  closed_upvalues.txt  closure.mng  default_1229832244465139383_0_2468.profraw  fib.py  include_lexical_scope.txt  main.txt  run.mng  run.sh  run.txt  set_upvalue.txt  test.c
.devcontainer/: setup.sh
c/: bindings.h  sum.c
cli/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs  lookup.rs  make_tests.rs  native.rs
macros/src/opcode/: attributes.rs  mod.rs
src/: cli.rs  cli_context.rs  cli_helper.rs  lib.rs  prelude.rs  rust_bindings.rs
src/backend/: callframe.rs  mod.rs
src/backend/vm/: mod.rs  natives.rs  ops.rs
src/common/: callframe.rs  chunk.rs  closure.rs  debug.rs  function.rs  interner.rs  linkedlist.rs  mod.rs  natives.rs  opcode.rs  rvalue.rs  value.rs
src/frontend/: bytecode.rs  compiler.rs  error.rs  file.rs  fixedvec.rs  location.rs  mod.rs  parser.rs  prelude.rs  scanner.rs
src/frontend/ast/: expression.rs  identifier.rs  literal.rs  mod.rs  node.rs  statement.rs  types.rs
src/frontend/bytecode/: mod.rs  scope.rs
src/frontend/compiler/: local.rs  mod.rs
src/frontend/parser/: mod.rs  result_handler.rs
src/frontend/typesystem/: mod.rs
src/tests/: mod.rs
src/tests/scripts/: multiply
tests/: mod.rs
tests/scripts/: block.mng  string.mng
tests/scripts/comparison/: equal.mng  greater.mng  greater_eq.mng  less.mng  less_eq.mng  not_equal.mng
tests/scripts/functions/: 1.mng  fib.mng  parameter.mng
tests/scripts/if/: 1.mng  if.mng  if_else.mng  if_expr.mng
tests/scripts/math/: add.mng  divide.mng  multiply.mng  subtract.mng
(+19 files in other folders)
