[package]
name = "rottenmangos"
version = "0.1.0"
edition = "2021"
[lib]
name = "rottenmangos"
[[bin]]
name = "rottenmangos-cli"
path = "cli/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
colored = "2.0.0"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
