[package]
name = "limesherbet"
version = "0.0.1-alpha"
edition = "2021"
[lib]
name = "limesherbet"
[[bin]]
name = "limesherbet"
path = "bin/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
colored = "2.0.0"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"
macros = { path = "./macros" }
lazy_static = "1.4.0"
proc-macro2 = "1.0.49"
once_cell = "1.17.0"
[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
[profile.release]
lto = "fat"
